--- a/src/assets/sass/_style copy 3.scss
+++ b/src/assets/sass/_style copy 3.scss
@@ -1009,7 +1009,6 @@
                         height: 35px;
                         box-sizing: border-box;
                         border: 1px solid modules.$color_primary !important;
-                        border-radius: 4px;
                         background: modules.$color_bgSelected;
                     }
 
@@ -1021,7 +1020,6 @@
                         box-sizing: border-box;
                         @include modules.font-style(text_smb13);
                         border: 1px solid modules.$color_primary !important;
-                        border-radius: 4px;
                         background: modules.$color_bgSelected;
                     }
                 }
@@ -1278,11 +1276,6 @@ td{
     &:hover {
         background: url("/src/assets/images/icon_circle_question_o.svg") no-repeat center center;
     }
-
-    &.absolute {
-        top: -6px;
-        left: 105px;
-    }
 }
 
 .accordion {
@@ -1291,18 +1284,10 @@ td{
         color: modules.$color_secondary;
         padding: 16px 20px;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         cursor: pointer;
         border-bottom: 1px solid modules.$color_blueG_300;
-        background-color: modules.$color-white;
-
-        > span{
-            display:inline-flex;
-            width: 100%;
-            justify-content: space-between;
-            max-width: 1400px;
-        }
 
         .icon{
             display: inline-block;
@@ -1313,11 +1298,10 @@ td{
         }
 
         &:hover{
-            background-color: modules.$color_blueG_50;
-            color: modules.$color_primary;
+            background-color: modules.$color_blueG_100;
 
             .icon{
-               background-color: modules.$color_primary;
+               background-color: modules.$color_secondary;
             }
         }
 
@@ -1787,21 +1771,7 @@ td{
                 }
             }
         }
-    }
-    .file-infos{
-        font-size: 12px;
-        color: modules.$color_blueG_600;
-        display: flex;
-        align-items: center;
-        gap: 4px;
-        padding: 10px 0 5px 0;
-        .icon{
-            display: inline-block;
-            width: 16px;
-            height: 16px;
-            background: url(../images/icon_info_mark.svg) no-repeat 50%;
-        }
-    }
+    }    
     .bottom-btns__controls{
         button{
             &.black{
@@ -2229,28 +2199,10 @@ td{
     border-bottom: 1px solid modules.$color_blueG_400;
     justify-content: center;
     .inner-block {
-        display: flex;
+             display: flex;
         align-items: center;
-        width: 1400px;
+        width: 1000px;
         height:100%;
-        position: relative;
-        margin-left: -162px;
-
-        .title {
-            width: 100%;
-            text-align:center;
-            @include modules.font-style(text_smb20);
-            color: modules.$color_blueG_800;
-        }
-
-        .btn-back {
-            position:absolute;
-            top:50%;
-            left:78px;
-            margin-top:-12px;
-            width: 24px;
-            height: 24px;
-        }
     }
 }
 
@@ -2285,13 +2237,6 @@ td{
     table {
         table-layout: fixed;
     }
-    thead {
-        th {
-            background-color: modules.$color_blueG_100;
-            border-top-color: modules.$color_blueG_200;
-            border-bottom-color: modules.$color_blueG_200;
-        }
-    }
     th, td {
         background-color: modules.$color_white;
         border: 1px solid modules.$color_blueG_200;
@@ -2303,12 +2248,6 @@ td{
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-
-        &.no-wrap{
-            overflow-wrap: break-all;
-            text-overflow: initial;
-            white-space: normal;
-        }
     }
 }
 
@@ -2318,95 +2257,33 @@ td{
     height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
-    padding:0 30px 30px;
     @include modules.custom-scrollbar();
 
     .sub-title{
         @include modules.font-style(text_smb16);
         color: modules.$color_secondary;
         padding: 0 0 12px 16px;
-        border-bottom: 2px solid modules.$color_blueG_200;
     }
     .accordion{
-        .acc-title{
-            padding-top: 24px;
-            margin: 0 -30px 10px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-        }
         .acc-container {
             padding:0;
-            border-bottom-color: modules.$color_blueG_200;
         }
     }
     .inner-wrap {
         padding: 30px 20px;
-        max-width: 1400px;
+        max-width: 1000px;
         margin: auto;
     }
 
     .data-table{
-        border: none;
-        tbody {
-            tr{
-                &:first-child {
-                    th, td {
-                        border-top:none;
-                    }
+        border-bottom:none;
+        tr{
+            &:last-child {
+                th, td {
+                    border-bottom:none;
                 }
-                &:last-child {
-                    th, td {
-                        border-bottom:none;
-                    }
-                }
-            }
-        }        
-    }
-
-    .targeting-detail-condition-wrap {
-        background: transparent;
-        padding: 30px 0;
-        max-width: 1400px;
-        margin: auto;
-        gap: 20px;
-
-        .title-card {
-            .title-box{
-                font-size: 16px;
-                padding-left: 8px;
-                padding-bottom: 2px;
             }
         }
-
-       .right-box-inner {
-            .title-card {
-                border-bottom: none;             
-            }
-            .limit-body {
-                padding-top: 0;
-                .limit-group{
-                    .conditions-btn {
-                        pointer-events: none;
-                        .top-cond{
-                            justify-content: center;
-                            i {
-                                display:none;
-                            }
-                        }
-                    }
-                }
-            }
-       }
-    }
-
-    .table-scroll .table-body td.editable, .btn-chk-type01 {
-        pointer-events: none !important;
-    }
-
-    .btn-add-deps, .mosu-chk-btn-wrap , .btn-common, .btn-info, .btn-textR, .limit-group-del,
-    .table-scroll th:last-child, 
-    .table-scroll td:last-child, 
-    .table-scroll col:last-child  {
-        display: none !important;
     }
 }
 
@@ -2416,45 +2293,8 @@ td{
             padding:0;
             .stage-box{
                 border-radius: 0;
-                background-color: modules.$color-white;
-                padding:0;
-
-                .box-content{
-                    border:none;
-                    // box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-                }
             }
         }
-    }
-}
-
-.block-collapse__btns {
-    position: absolute;
-    right: -80px;
-
-    .btn-textR {
-        background-color: modules.$color-white;
-
-        > i {
-            display: inline-block;
-            width: 16px;
-            height: 16px;
-            background-color: modules.$color_blueG_600;
-            &.open{
-                mask: url(../images/icon_navi_minus.svg) no-repeat 50%;
-            }
-            &.close{
-                mask: url(../images/icon_navi_plus.svg) no-repeat 50%;
-            }
-        }
-
-        &:hover{
-            > i {
-               background-color: modules.$color_primary; 
-            }
-        }
-
-        
     }
 }
 
@@ -2527,9 +2367,6 @@ td{
     .table-common__body{
         table tr{
             cursor: default;
-            &.new-target{
-                background-color: modules.$color_bgRed;
-            }
         }
     } 
 }
