--- a/src/assets/sass/_common.scss
+++ b/src/assets/sass/_common.scss
@@ -243,19 +243,29 @@ select {
   padding-left: 10px;
 }
 textarea {
-  padding: 7px 12px;
-  border: 1px solid #d3d3d3;
+  padding: 8px 16px;
   overflow-y: auto;
   outline: none;
-  border: 1px solid #58585e;
-  background-color: #fff;
+  border: 1px solid modules.$color_blueG_500;
+  background-color: modules.$color_white;
   width: 100%;
   box-sizing: border-box;
   border-radius: 4px;
+
+  @include modules.custom-scrollbar{
+      &::-webkit-scrollbar-track {
+          border-radius: 0 4px 4px 0;
+      }
+  }
+
+  &:disabled {
+    background-color: modules.$color_blueG_100;
+    border-color: modules.$color_blueG_400;
+  }
 }
-textarea:focus {
-  border: 1px solid #0173c7;
-}
+// textarea:focus {
+//   border: 1px solid #0173c7;
+// }
 em,
 address {
   font-style: normal;
@@ -345,16 +355,16 @@ strong {
 }
 
 ::placeholder {
-  color: rgba(255,255,255,1);
+  color: modules.$color_blueG_500;
   opacity: 1;
 }
 /* placeholder 스타일 지정 */
 input::placeholder {
-  color: rgba(255,255,255,1);
+  color: modules.$color_blueG_500;
   opacity: 1; 
 }
 textarea::placeholder {
-  color: rgba(255,255,255,1);
+  color: modules.$color_blueG_500;
   opacity: 1; 
 }
 
@@ -676,7 +686,7 @@ input::-webkit-inner-spin-button {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid #7F8A94;
+  border: 1px solid modules.$color_blueG_700;
   min-width: 400px;
   animation: ease 0.4s dialogShow;
   position: relative;
@@ -1101,16 +1111,6 @@ input::-webkit-inner-spin-button {
 }
 .text-end {
   text-align: right;
-}
-
-// 너비값
-.w-20 {
-  max-width: 20%;
-  width: 100%;
-}
-.w-53px {
-  max-width: 53px;
-  width: 100%;
 }
 
 // 제한 조건 제외 조건 수정 버튼이 사용
