--- a/src/assets/sass/_data.scss
+++ b/src/assets/sass/_data.scss
@@ -6,6 +6,9 @@ $min-width: 1440px;
 $max-height: 945px;
 $side-width: 272px;
 $break-point: 1399px;
+$iwidth1: 29px;
+$iwidth2: 11px;
+$iwidth3: 17px;
 
 $focus-color: #E30084;
 $over-color: #f3269e;
